--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,4 +19,9 @@
   </p>
   <%= link_to front_page_picture, root_path %> 
   <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+  <br/>
+  <iframe src="http://www.facebook.com/plugins/like.php?href=http://essentialreadinglist.heroku.com/"
+        scrolling="no" frameborder="0"
+        style="border:none; width:450px; height:80px"></iframe>
 <% end %>
+
