--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,16 @@
 			  <div class="flash <%= key %>"><%= value %></div>
 			<% end %>
 			<%= yield %>
+			
 		</section>
+		
 		<%= render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
+	</div>
+	<div class="facebook-bar">
+	  <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+	  <fb:like-box href="http://www.facebook.com/pages/The-Great-Wars-Essential-Reading-List/169773219723405" width="150" show_faces="true" border_color="" stream="true" header="true">
+	  </fb:like-box>
 	</div>
   </body>
 </html>
