--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
 <h1>About</h1>
 <p>
-	<a href="hhtp://www.bcoostende.be/">Ruby on Rails Tutorial</a>
-	This is the sample application.
+	<a Under construction </a>
 </p>
