--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,7 +1,4 @@
 <h1>Help</h1>
 <p>
-	Get help on RoRTuT at the
-	<a href="http://railstutorial.org/help">Ruby on Rails Tutorial help page</a>
-	To get help on this sample application, see the
-	<a href="http://railstutorial.org/book">Rails Tutorial book</a>
+	Under construction
 </p>
