--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 	<nav class="round">
 		<ul>
 			<li><%= link_to "About",  about_path %></li>
-			<li><%= link_to "Contact",  contact_path %></li>
+			<li><%= link_to "Contact",  new_support_path %></li>
 			<li><a href="http://www.facebook.com/">News</a/></li>
 		</ul>
 	</nav>
