--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,11 +11,12 @@
 				<li><strong>ISBN</strong>  <%= @book.isbn %></li>
 			</ul>
 			<% if signed_in? %>
+			  <strong>Book added by: </strong> <%= link_to @book.user.name, @book.user %>
 			  <% if ( current_user.admin? ) or (current_user.id == @book.creator_id ) %>
+			    <br/>
 			    <%= link_to "Edit book details", edit_book_path(@book) %><br/>
-			    <strong>Added by: </strong> <%= link_to @book.user.name, @book.user %>
-			    <%= render 'shared/comment_form' %>
 			  <% end %>
+			  <%= render 'shared/comment_form' %>
 			<% end %>
 			<%= render 'shared/book_feed' %>
 		</td>
