--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 	 <%= csrf_meta_tag %>
 	 <%= render 'layouts/stylesheets' %>
 	 <%= javascript_include_tag :defaults %>
+	 <script type="text/javascript" src="public/javascripts/sorttable.js"></script>
   </head>
   <body>
 	<div class="container">
