sorting will_paginate

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,10 +10,10 @@
 	<table class="sortable">
 		<tr>
 		    <th class="sorttable_nosort">Image</th>
-			<th class="sorttable_alpha">Title</th>
-			<th class="sorttable_numeric">Author</th>
-			<th class="sorttable_numeric">Votes</th>
-		    <th class="sorttable_numeric">Comments</th>
+			<th class="sortable_alpha">Title</th>
+			<th class="sortable_alpha">Author</th>
+			<th class="sortable_numeric">Votes</th>
+		    <th class="sortable_numeric">Comments</th>
 		</tr>
 		<%= render @books %>
 	</table>
