--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All readers</h1>
-<%= @users.count %> users have registered
+<%= User.all.count %> users have registered
 <%= will_paginate %>
 
 <table class="users">
