--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,9 @@
 <h1>The Essential List</h1>
-<%= Book.all.count %> books in the List
+<%= Book.all.count %> books in the List, showing 
+<%= select_tag :per_page, options_for_select([10,15,20,30,10000], params[:per_page].to_i),
+               :onchange => "if(this.value){window.location='?per_page='+this.value;}" %> books per page.
 <br/>
-
+<br/>
 
 <% unless @books.empty? %>
 
