--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
 	 <title><%= title %></title>
 	 <%= csrf_meta_tag %>
 	 <%= render 'layouts/stylesheets' %>
+	 <script src="prototype.js"></script>
+	 <script src="sorttable.js"></script>
 	 <%= javascript_include_tag :defaults %>
-	 
   </head>
   <body>
 	<div class="container">
