--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
 <h1>About</h1>
-<p>
-	<a Under construction </a>
-</p>
+<h2>
+	The Great War's Essential Booklist v1.0.1
+</h2>
+<br/>
+<p>created and maintained by the LiteHouse</p>
