--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,17 @@
 <h1>Help</h1>
 <p>
 	Under construction
+</p>	
+<h2>	
+	How to sort in the current version 1.0.1 ?
+</h2>
+<p>	
+	By default the lists are sorted alphabetically.
+</p>
+<p>	
+	If you want to sort the entire list of books differently, then select 9999 items per page. Next you can click on any of the headers (eg name, comments,...) to sort the entire list ascending or descending.
+</p>
+<p>	
+	Select 10, 15, 20...items per page to use the pagination on the sorted list. Be careful, when using pagination, the sort function will only work for the page you are on, not on the entire list.
+	
 </p>
