--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,18 +1,18 @@
 <tr>
-	<td class="user">
-	 <span class="grav"><%= gravatar_for user, :size => 30 %></span>
-	 <span class="user-name"><%= link_to user.name, user %></span>
-	 <span class="user-admin">
+	<td class="user-gravatar">
+	   <%= gravatar_for user, :size => 30 %>
+	</td>
+	<td class="user-name">
+	   <%= link_to user.name, user %>
 	   <% if user.admin?%>
 	      **Admin** 
 	   <% end %>
-	 </span>
 	</td>
-	<td class="user-votes"><%= user.votes.count %> votes </td>
-	<td class="user-comments"><%= user.comments.count %> comments </td>
-	<td class="user-delete"><% if current_user.admin? %>
-	  <%= link_to( "delete", user, :method => :delete, :confirm => "Are you sure?", :title => "Delete #{user.name}") %>
-	  <% end %>
+	<td class="user-votes">
+	  <%= user.votes.count %> votes
+	</td>
+	<td class="user-comments">
+	  <%= user.comments.count %> comments
 	</td>
 </tr>
 	
