--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,9 +7,7 @@
 	</td>
 	<% if current_user?(@comment.user) %>
 	<td>
-		<%= link_to "delete", comment, :method => :delete,
-											:confirm => "Are you sure?",
-											:title => @comment %>
+		<%= link_to "Delete", @comment.user, :method => :delete, :confirm => "Are you sure", :title => "Delete comment" %>
 	</td>
 	<% end %>
 </tr>
