--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -7,9 +7,7 @@
 	</td>
 	<% if current_user?(micropost.user) %>
 	<td>
-		<%= link_to "delete", micropost, :method => :delete,
-											:confirm => "Are you sure?",
-											:title => micropost.content %>
+		<%= button_to "Delete", micropost, :method => :delete, :confirm => "Are you sure", :title => "Delete micropost" %>
 	</td>
 	<% end %>
 </tr>
