--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -13,9 +13,7 @@
 	</td>
 	<% if current_user?(feed_item.user) %>
 	<td>
-		<%= link_to "delete", feed_item, :method => :delete,
-											:confirm => "Are you sure?",
-											:title => feed_item.content %>
+		<%= button_to "Delete", feed_item, :method => :delete, :confirm => "Are you sure", :title => "Delete micropost" %>
 	</td>
 	<% end %>
 </tr>
