--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,9 @@
 			  <%= @user.name %>
 			</h1>
 			<%= render 'follow_form' if signed_in? %>
+			<% if current_user.admin? %>
+			  <%= button_to "Delete this user", @user, :method => :delete, :confirm => "Are you sure", :title => "Delete user" %>
+			  <% end %>
 			<% unless @user.microposts.empty? %>
 			  <table class="microposts" summary="User microposts">
 				<%= render @microposts %>
