added amazon links to book page

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -9,10 +9,10 @@
 		<%= book.author %>
 	</td>
 	<td class="book-votes">
-		<%= book.votes.count %> votes
+		<%= book.votes.count %>
 	</td>
 	<td class="book-comments">
-		<%= book.comments.count %> comments
+		<%= book.comments.count %>
 	</td>
 	
 </tr>
