--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,6 +34,10 @@
 			<% if signed_in? %>
 			  <%= render 'vote_form' %>
 			<% end %>
+			<br/>
+			<br/>
+			<iframe src="http://rcm-uk.amazon.co.uk/e/cm?t=grewarsessrea-21&o=2&p=8&l=as1&asins=<%= @book.isbn[@book.isbn.length-10,@book.isbn.length] %>&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+			
 			
 		</td>
 		
