--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -9,10 +9,10 @@
 	   <% end %>
 	</td>
 	<td class="user-votes">
-	  <%= user.votes.count %> votes
+	  <%= user.votes.count %>
 	</td>
 	<td class="user-comments">
-	  <%= user.comments.count %> comments
+	  <%= user.comments.count %>
 	</td>
 </tr>
 	
