--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,6 @@
 	</nav>
 	<br/>
 	<script type="text/javascript"><!--
-	amazon_ad_tag = "thegrewarsess-20"; amazon_ad_width = "468"; amazon_ad_height = "60"; amazon_ad_link_target = "new";//--></script>
-	<script type="text/javascript" src="http://www.assoc-amazon.com/s/ads.js"></script>
-	
+	amazon_ad_tag = "grewarsessrea-21"; amazon_ad_width = "468"; amazon_ad_height = "60"; amazon_ad_logo = "hide"; amazon_ad_price = "retail"; amazon_ad_discount = "remove"; amazon_ad_include = "wwi;great+war;world+war+i;flanders;battlefield"; amazon_ad_categories = "abci";//--></script>
+	<script type="text/javascript" src="http://www.assoc-amazon.co.uk/s/ads.js"></script>
 </footer>
