--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,6 +10,7 @@
 				<li><strong>Publisher</strong>  <%= @book.publisher %></li>
 				<li><strong>ISBN</strong>  <%= @book.isbn %></li>
 			</ul>
+			
 			<% if signed_in? %>
 			  <% if ( current_user.admin? ) or (current_user.id == @book.creator_id ) %>
 			    <br/>
@@ -37,11 +38,11 @@
 			<br/>
 			<br/>
 			<iframe src="http://rcm-uk.amazon.co.uk/e/cm?t=grewarsessrea-21&o=2&p=8&l=as1&asins=<%= @book.isbn[@book.isbn.length-10,@book.isbn.length] %>&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-			
-			
 		</td>
 		
 	</tr>
 </table>
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=246300548714675&amp;xfbml=1"></script><fb:like href="" send="true" width="300" show_faces="true" action="recommend" font=""></fb:like>
+<br/>
 
 
