--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -42,7 +42,8 @@
 		
 	</tr>
 </table>
-<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=246300548714675&amp;xfbml=1"></script><fb:like href="" send="true" width="300" show_faces="true" action="recommend" font=""></fb:like>
+<% url = request.url %><br/>
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=204944952886536&amp;xfbml=1"></script><fb:like href="<%= url %>" send="true" width="300" show_faces="true" action="recommend" font=""></fb:like>
 <br/>
 
 
