--- a/app/views/books/report_book.html.erb
+++ b/app/views/books/report_book.html.erb
@@ -1,4 +1,4 @@
-<h1>The Great War's Essential Reading List'</h1>
+<h1>The Great War's Essential Reading List</h1>
 <h2>Admin Book Reporting</h2>
 <br/>
 <p>Reporting Date: <%= Time.now %><p>
