opiniecomict bij herstart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"  "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
   <head>
 	 <title><%= title %></title>
+	 <meta name="description" content="Listing, voting and commenting books about the Great War">
+	 <meta name="keywords" content="books, WWI, ww1, greatwar, great war, first world war, world war one, world war 1, passchendaele, ypres, flanders fields, poppy, rememberance, centenary, 100 year">
 	 <%= csrf_meta_tag %>
 	 <%= render 'layouts/stylesheets' %>
 	 <script src="prototype.js"></script>
